tests/negative_tests/syntax_errors/if_no_condition.c
// INVALID - Syntax Error: if requires condition
// Expected: "expected '(' after if"
int main() {
    int x;
    if {  // ERROR: missing condition
        x = 5;
    }
    return x;
}
